tests/derive_compile_fail/unknown_field_attribute.rs
use snowflake_connector_rs::FromRow;

#[derive(FromRow)]
struct Bad {
    #[snowflake(unknown = "value")]
    value: i64,
}

fn main() {}
